--- a/MobileShop/assets/css/ProductDetail.css
+++ b/MobileShop/assets/css/ProductDetail.css
@@ -101,6 +101,15 @@ h3{
     text-align: center;
 }
 
+.product-order input {
+    padding-left: 24px;
+    width: 60px;
+    height: 50px;
+    font-size: 16px;
+    border-radius: 12px;
+    border: solid 1px #0f0f0f;
+}
+
 .buy-now-btn:hover{
    opacity: 0.9;
 }
