--- a/MobileShop/assets/css/Cart.css
+++ b/MobileShop/assets/css/Cart.css
@@ -2,10 +2,13 @@
 .cart-page {
     background-color: #fff;
     padding: 40px 0;
+    margin: 64px 0 200px;
 }
 
     .cart-page h1 {
         font-size: 2.2rem;
+        font-weight:700;
+        text-transform:uppercase;
         text-align: center;
         margin-bottom: 40px;
     }
@@ -48,11 +51,17 @@ img {
 /* Style cho từng cột */
 td:nth-child(1) {
     width: 100px;
+    font-weight:600;
 }
 
 td:nth-child(2) {
     font-weight: 600;
     width: 35%;
+}
+
+tbody input {
+    width: 48px;
+    padding: 8px 0 8px 4px;
 }
 
 td:nth-child(3),
@@ -61,7 +70,12 @@ td:nth-child(5) {
     text-align: center;
 }
 
-tbody button{
+
+td:nth-child(3), td:nth-child(5) {
+    color: #fd475a;
+    font-weight:600;
+}
+td button{
     border:none;
 }
 
@@ -70,11 +84,36 @@ tbody tr:hover {
     background-color: #f9f9f9;
 }
 
-/* Style tổng giá tiền */
+.cart-summary{
+    float:right;
+    margin: 32px 0;
+}
+
+.cart-summary p{
+    font-weight:600;
+
+}
+
 #totalPrice {
     margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
-    text-align: right;
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #fd475a;
 }
+p {
+    font-size: 1.6rem;
+    margin-top: 16px;
+    margin-left: -94px;
+}
+
+.cart-summary button {
+    float: right;
+    font-size: 1.6rem;
+    background: #009981;
+    color: #fff;
+    border: none;
+    padding: 12px;
+    border-radius: 8px;
+    margin: 16px 0 16px -94px;
+}
+
