--- a/MobileShop/assets/css/responsive.css
+++ b/MobileShop/assets/css/responsive.css
@@ -22,27 +22,7 @@
             font-size: 1.6rem;
         }
 
-    .navigation {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 16px;
-        position: absolute;
-        top: 100%;
-        background-color: #ccc;
-        width: 100%;
-        z-index: 100;
-    }
-
-        /* Điều chỉnh kiểu khi menu hiển thị */
-        .navigation.show {
-            display: flex;
-        }
-
-        .navigation li {
-            padding: 8px 0;
-        }
+   
     /* .user {
         display: flex;
         align-items: center;
@@ -133,8 +113,6 @@
     .popular-list {
         grid-template-columns: repeat(1,1fr);
     }
-
-    /*list filter*/
     .list-filters{
         display:none;
     }
@@ -168,12 +146,13 @@
         background: #fff;
         width: 100%;
         box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+        display: block;
     }
 
     .menu-bottom-container {
         display: flex;
         padding:16px;
-        column-gap:16px;
+        column-gap:28px;
     }
     .menu-item{
         display:flex;
@@ -181,4 +160,95 @@
         align-items:center;
     }
 
+    /*Sidebar*/
+
+    .sidebar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        background: #fff;
+        box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+        display: none;
+        height: 100%;
+        backdrop-filter: blur(8px);
+        background-color: rgba(255, 255, 255, 1);
+    }
+
+    .sidebar.show{
+        display:block;
+    }
+
+    /*Sidebar-top*/
+    .sidebar-top{
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        margin:8px 0;
+    }
+    .sidebar .sidebar-top img {
+        width:100px;
+        height: 40px;
+        transform: translateX(10px);
+        object-fit: cover;
+    }
+
+    .sidebar-top button {
+        border: none;
+        transform: translateX(-2px);
+    }
+
+    /*Search*/
+    .sidebar .search {
+        display: inline-block;
+        position: relative;
+        width: 90%;
+        margin: 8px;
+    }
+
+        .sidebar .search input[type="text"] {
+             width: 100%; 
+            padding: 12px 20px;
+            border: solid 1px #c9c9c9;
+            border-radius: 24px;
+            outline: none;
+            box-shadow: 0 2px 2px #ccc;
+            position: relative;
+        }
+
+
+        .navigation {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            width: 100%;
+        }
+
+/*        .navigation.show {
+            display: flex;
+        }*/
+                .navigation li a {
+                    font-weight: 700;
+                    padding: 8px 16px;
+                    display:flex;
+                }
+
+                .navigation li a:hover {
+                   background:#ccc;
+                }
+
+    .sidebar .list-filters-responsive {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        margin-right: 20px;
+        background: #fff;
+        width: 100%;
+    }
+
+    /*Chi tiết sản phẩm*/
+    /*Sản phẩm liên quan*/
+    .related-list{
+        grid-template-columns:repeat(1,1fr);
+    }
 }
