--- a/MobileShop/assets/css/SignUp.css
+++ b/MobileShop/assets/css/SignUp.css
@@ -124,6 +124,16 @@ body {
 /**/
 
 @media (max-width: 768px) {
+    .sign-up-responsive {
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        position: relative;
+        overflow: hidden;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
     .content {
         padding: 20px;
     }
@@ -143,6 +153,17 @@ body {
 }
 
 @media (max-width: 480px) {
+
+    .sign-up-responsive {
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        position: relative;
+        overflow: hidden;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
     .content {
         padding: 15px;
     }
