--- a/MobileShop/assets/css/responsive.css
+++ b/MobileShop/assets/css/responsive.css
@@ -20,61 +20,12 @@
         .header-responsive .icon {
             color: #000;
             font-size: 1.6rem;
+            transform:translateX(10px);
+        }
+        .header-top-responsive a{
+            transform:translateX(28px);
         }
 
-   
-    /* .user {
-        display: flex;
-        align-items: center;
-        margin: 0 8px;
-    }
-
-
-    .user-info {
-        display: flex;
-        word-break: keep-all;
-        align-items: center;
-        margin-left: 6px;
-        font-size: 1.6rem;
-    }
-
-    .btn-action {
-        display: flex;
-    }
-
-        .btn-action a {
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: nowrap;
-            color: #00483d;
-            font-size: 2.4rem;
-            font-weight: 700;
-        }
-
-        .btn-action span {
-            font-size: 1.6rem;
-        }
-
-    .logoutbtn {
-        padding: 8px;
-        color: #fff;
-        margin-left: 16px;
-        border-radius: 8px;
-        background: #00483d;
-    } */
-
-
-    .header-responsive .search {
-        display: block;
-    }
-
-    .header-responsive .cart {
-        display: block;
-    }
-
-    .header-responsive .search input[type="text"] {
-        width: 100%;
-    }
     .backToTop{
         display:none;
     }
@@ -163,14 +114,17 @@
     /*Sidebar*/
 
     .sidebar {
-        position: absolute;
+        /*        position: absolute;*/
+        position: fixed;
         top: 0;
         left: 0;
-        z-index: 100;
+        z-index: 101;
+        overflow-y: auto;
         background: #fff;
         box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
         display: none;
         height: 100%;
+        padding: 16px;
         backdrop-filter: blur(8px);
         background-color: rgba(255, 255, 255, 1);
     }
@@ -195,7 +149,8 @@
 
     .sidebar-top button {
         border: none;
-        transform: translateX(-2px);
+        transform: translateX(8px);
+        font-size:1.4rem;
     }
 
     /*Search*/
@@ -250,5 +205,12 @@
     /*Sản phẩm liên quan*/
     .related-list{
         grid-template-columns:repeat(1,1fr);
+    }
+}
+
+
+@media (min-width:768px) and (max-width:1440px){
+    .sidebar,.menu-bottom{
+        display:none;
     }
 }
