--- a/MobileShop/assets/css/Cart.css
+++ b/MobileShop/assets/css/Cart.css
@@ -96,14 +96,14 @@ tbody tr:hover {
         margin-left: -94px;
     }
 
-#totalPrice {
+.cart-page strong {
     margin-top: 20px;
     font-size: 1.6rem;
     font-weight: 600;
     color: #fd475a;
 }
 
-.cart-summary .btn-checkout {
+.btn-checkout {
     float: right;
     font-size: 1.6rem;
     background: #009981;
@@ -114,3 +114,75 @@ tbody tr:hover {
     margin: 16px 0 16px -94px;
 }
 
+
+/*Thanh toán*/
+.checkout-page .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.checkout-page h1{
+    font-size:2.8rem;
+    font-weight:700;
+
+}
+.checkout-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    gap: 20px;
+    margin: 16px 0;
+}
+
+.customer-info {
+    width: 55%;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+
+.order-summary {
+    width: 45%;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    padding: 20px;
+}
+
+.customer-info h2, .order-summary h2 {
+    margin-bottom: 15px;
+    font-weight:700;
+}
+
+    .customer-info label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
+
+    .customer-info input {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+    }
+
+    .cart-item{
+        display:flex;
+        justify-content:space-between;
+    }
+
+    .order-summary .order-total,.shipping-fee{
+        display:flex;
+        justify-content:space-between;
+    }
+    .order-total span {
+        font-weight:600;
+    }
+
+.order-total strong {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #fd475a;
+}
